--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -48,13 +48,20 @@
                                         <p><em><b style="color: red !important">page under construction; please contact me at noahskang@gmail.com if you would like more information in the mean time! :)</b></em></p>
 									</header>
 									<!-- <span class="image main"><img src="images/maint1-hero-img.jpg" alt="" /></span> -->
-									<div class="content-block narrow-centered-text">
-										<h2>
-											Context
-										</h2>
-										<p>
-											NerdWallet’s mission is to empower users with the information they need to make life’s financial decisions with confidence. The rise of LLMs presented both a challenge and an opportunity to advance this mission. I led a hackathon team to create an MVP of a chat module incorporating ChatGPT technology, winning the top award and inspiring leadership to establish a dedicated AI team, where I led design.
-										</p>
+									<div class="content-block">
+										<div class="row row-spacer horizontally-centered">
+											<div class="8u 12u$(small)">
+												<div class="image main">
+													<img class="image-shadow" src="images/nerdai-hero.jpg" alt="old designs" title="old designs"/>
+												</div>
+											</div>
+											<div class="4u 12u$(small)">
+												<h2>Context</h2>
+												<p>
+													NerdWallet’s mission is to empower users with the information they need to make life’s financial decisions with confidence. The rise of LLMs presented both a challenge and an opportunity to advance this mission. I led a hackathon team to create an MVP of a chat module incorporating ChatGPT technology, winning the top award and inspiring leadership to establish a dedicated AI team, where I led design.
+												</p>
+											</div>
+										</div>
 									</div>
 									<div class="content-block narrow-centered-text">
 										<h2>Objectives</h2>
@@ -97,15 +104,22 @@
                                                 </div>
                                             </div>
 										</div>
-                                        
-										<h3>Synthesis</h3>
-										<p>Collaborating closely with product, engineering, and design teams, I synthesized research findings into actionable insights, sharing these through detailed research decks. This process ensured cross-functional alignment and buy-in.
-										</p>
-										<h3>Requirements</h3>
-										<p>I partnered with engineering and product teams to define project requirements, milestones, and pathways, ensuring efficient time management and resource allocation. Regular syncs with key stakeholders kept expectations realistic and aligned.</p>
+                                        <div class="row row-spacer horizontally-centered">
+											<div class="6u 12u$(small)">
+												<h3>Synthesis</h3>
+												<p>Collaborating closely with product, engineering, and design teams, I synthesized research findings into actionable insights, sharing these through detailed research decks. This process ensured cross-functional alignment and buy-in.
+												</p>
+											</div>
+											<div class="6u 12u$(small)">
+												<h3>Requirements</h3>
+												<p>I partnered with engineering and product teams to define project requirements, milestones, and pathways, ensuring efficient time management and resource allocation. Regular syncs with key stakeholders kept expectations realistic and aligned.</p>
+											</div>
+										</div>
+										
+
 									</div>
 									<div class="content-block">
-                                        <h1>
+                                        <h1 style="margin: auto; text-align: center">
                                             DESIGN
                                         </h1>
 										<div class="row row-spacer horizontally-centered">
@@ -169,7 +183,7 @@
                                             </div>
                                             <div class="7u 12u$(small)">
                                                 <div class="image main">
-                                                    <img class="image-shadow" src="images/old-designs.jpg" alt="old designs" title="old designs"/>
+                                                    <img class="image-shadow" src="images/nerdai-visual-refinement.jpg" alt="old designs" title="old designs"/>
                                                 </div>
                                             </div>
                                         </div>
