--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -52,7 +52,7 @@
 										<div class="row row-spacer horizontally-centered">
 											<div class="8u 12u$(small)">
 												<div class="image main">
-													<img class="image-shadow" src="images/nerdai-hero.jpg" alt="old designs" title="old designs"/>
+													<img class="img-shadow" src="images/nerdai-hero.jpg" alt="old designs" title="old designs"/>
 												</div>
 											</div>
 											<div class="4u 12u$(small)">
@@ -100,7 +100,7 @@
 
                                             <div class="7u 12u$(small)">
                                                 <div class="image main">
-                                                    <img src="images/user-research.jpg" alt="user research" title="old designs"/>
+                                                    <img class="img-shadow" src="images/user-research.jpg" alt="user research" title="old designs"/>
                                                 </div>
                                             </div>
 										</div>
@@ -131,7 +131,7 @@
 											</div>
 											<div class="7u 12u$(small)">
 												<div class="image main">
-													<img class="image-shadow" src="images/user-journey-nw.jpeg" alt="old designs" title="old designs"/>
+													<img class="img-shadow" src="images/user-journey-nw.jpeg" alt="old designs" title="old designs"/>
 												</div>
 											</div>
 										</div>
@@ -145,7 +145,7 @@
 											</div>
 											<div class="7u 12u$(small)">
                                                 <div class="image main">
-                                                    <img class="image-shadow" src="images/Ideation.jpg" alt="old designs" title="old designs"/>
+                                                    <img class="img-shadow" src="images/Ideation.jpg" alt="old designs" title="old designs"/>
                                                 </div>
                                             </div>
 										</div>
@@ -158,7 +158,7 @@
                                                 </div>
                                                 <div class="7u 12u$(small)">
                                                     <div class="image main">
-                                                        <img class="image-shadow" src="images/competitor-analysis-nw.jpeg" alt="old designs" title="old designs"/>
+                                                        <img class="img-shadow" src="images/competitor-analysis-nw.jpeg" alt="old designs" title="old designs"/>
                                                     </div>
                                                 </div>
                                             </div>
@@ -183,18 +183,13 @@
                                             </div>
                                             <div class="7u 12u$(small)">
                                                 <div class="image main">
-                                                    <img class="image-shadow" src="images/nerdai-visual-refinement.jpg" alt="old designs" title="old designs"/>
+                                                    <img class="img-shadow" src="images/nerdai-visual-refinement.jpg" alt="old designs" title="old designs"/>
                                                 </div>
                                             </div>
                                         </div>
 
                                         <div class="row row-spacer horizontally-centered">
-                                            <div class="6u 12u$(small)">
-                                                <div class="image main">
-                                                    <img class="image-shadow" src="images/prototypes.jpeg" alt="old designs" title="old designs"/>
-                                                </div>
-                                            </div>
-                                            <div class="6u 12u$(small)">
+                                            <div class="5u 12u$(small)">
                                             <h2>
                                                 Prototypes 
 											</h2>
@@ -203,37 +198,40 @@
 
 												</p>
                                             </div>
+											<div class="7u 12u$(small)">
+                                                <div class="image main">
+                                                    <img class="img-shadow" src="images/prototypes.jpeg" alt="old designs" title="old designs"/>
+                                                </div>
+                                            </div>
 										</div>
 
 										<div class="row row-spacer horizontally-centered">
-											<div class="6u 12u$(small)">
+											<div class="5u 12u$(small)">
 												<h2>
 													Research
 												</h2>
 												<p class="_1em-bottom">
-													Before handing off to developers, I pressure test my designs through usertesting, which can help illuminate usability issues before investing in development time. 
+													Before handoff, pressure testing designs using user testing to illuminate usability issues before investing in development time. 
 												</p>
 											</div>
-											<div class="6u 12u$(small)">
+											<div class="7u 12u$(small)">
 												<div class="image main">
-													<img class="image-shadow" src="images/old-designs.jpg" alt="old designs" title="old designs"/>
+													<img class="img-shadow" src="images/user-research.jpg" alt="old designs" title="old designs"/>
 												</div>
 											</div>
 										</div>
     
-										<div class="row row-spacer horizontally-centered">
-											<div class="6u 12u$(small)">
-												<div class="image main">
-													<img class="image-shadow" src="images/old-designs.jpg" alt="old designs" title="old designs"/>
-												</div>
+										<div class="content-block">
+											<div class="narrow-centered-text">
+											<h2>
+												Handoff 
+											</h2>
+											<p class="_1em-bottom">
+												To ensure seamless translation of design to dev, I thoroughly annotate designs, comprehensively enumerate design requirements, and conduct walk-throughs for the engineers.  Putting the work in up-front helps reduce the number of issues that surface in post-development design reviews.
+											</p>
 											</div>
-											<div class="6u 12u$(small)">
-												<h2>
-													Handoff 
-												</h2>
-												<p class="_1em-bottom">
-													To ensure seamless translation of design to dev, I thoroughly annotate designs, write up design requirements, and conduct walk-throughs for the engineers.  This is more efficient than trying to correct errors after development, when code is already in stage.  
-												</p>
+											<div class="image main">
+												<img class="img-shadow" src="images/handoff-file-nerd-ai.jpeg" alt="old designs" title="old designs"/>
 											</div>
 										</div>
 
