finish updating nerdwallet AI story
finish updating nerdwallet AI story

--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -45,11 +45,11 @@
 								<div class="inner project-wider">
 									<header class="major">
 										<h1>NerdWallet AI</h1>
-                                        <p><em><b style="color: red !important">page under construction; please contact me at noahskang@gmail.com if you would like more information in the mean time! :)</b></em></p>
+                                        <!-- <p><em><b style="color: red !important">page under construction; please contact me at noahskang@gmail.com if you would like more information in the mean time! :)</b></em></p> -->
 									</header>
 									<!-- <span class="image main"><img src="images/maint1-hero-img.jpg" alt="" /></span> -->
 									<div class="content-block">
-										<div class="row row-spacer horizontally-centered">
+										<div class="row horizontally-centered">
 											<div class="8u 12u$(small)">
 												<div class="image main">
 													<img class="img-shadow" src="images/nerdai-hero.jpg" alt="old designs" title="old designs"/>
@@ -226,7 +226,7 @@
 											<h2>
 												Handoff 
 											</h2>
-											<p class="_1em-bottom">
+											<p>
 												To ensure seamless translation of design to dev, I thoroughly annotate designs, comprehensively enumerate design requirements, and conduct walk-throughs for the engineers.  Putting the work in up-front helps reduce the number of issues that surface in post-development design reviews.
 											</p>
 											</div>
@@ -235,7 +235,7 @@
 											</div>
 										</div>
 
-									<div class="content-block">
+									<div class="narrow-centered-text">
 										<h1>Post-Development</h1>
 										<h3>Analysis</h3>
 										<p>Post-development, I used user research studies to qualitatively assess the success of our designs.  This supplemented the quantitative data we used to measure engagement.  It’s critical to employ user research at the end of the design process as well as at the beginning in order to test hypotheses and get a more tactile sense of how to improve for the future. 
@@ -245,20 +245,37 @@
                                 </div>
 								<div class="inner project-wider">
 										<div class="content-block">
-												<h1>conclusion</h1>
-												<h2>Successes</h2>
-												<p>We succeeded in providing a chat that was:</p>
-													Useful:
-													Trustworthy: 
-													Discoverable:
-													Clearly communicated its capability and purpose: 	
-										</div>
-										<div class="content-block">
-											<h2>Areas of improvement</h2>
+												<div class="narrow-centered-text">
+												<h1 >conclusion</h1>
+												<h2 style="margin-top: 2em">Successes</h2>
+													<p>Our quantitative data and qualitative user research gave us validation that we had succeeded in using NerdWallet AI to aid the user journey for NerdWallet users and solve the pain points we had identified</p>
+												</div>
+													<div class="row row-spacer center-contents">
+														<div class="5u 12u$(small)">
+															<h3>User satisfaction</h3>
+															<p>Users reported a high level of satisfaction with NerdWallet AI, remarking on its intuitive usability, speed, and the convenience with which it led them to relevant and trustworthy content</p>
+														</div>
+														<div class="5u 12u$(small)">
+															<h3>User engagement</h3>
+															<p>
+																Through multiple rounds of research, analysis, and iteration, we increased the engagement with our chatbot from 1.42% to 5.01%.
+															</p>
+														</div>
+													</div>
+													<div class="row center-contents">
+														<div class="5u 12u$(small)">
+															<h3>Boosting the user journey</h3>
+															<p>We discovered that the presence of the chat-bot could boost user engagment with the rest of the site, increasing average user page views and increasing likelihod of monetizing.</p>
+														</div>
+														<div class="5u 12u$(small)">
+															<h3>Product expansion</h3>
+															<p>Initially, we rolled the chat out on articles as a supplement to the user's reading experience. After seeing success, this expanded to a prominent placement on the home page. Most recently, we moved to include personalization capability by integrating the chat with user's bank account information.</p>
+														</div>
+													</div>
 										</div>
 									</div>
 									<div class="content-block center-contents">
-										<img class="homepage-img" style="max-width: 1100px;" src="images/nw-footer-hero.png" alt="" />
+										<img class="homepage-img" style="max-width: 1100px;" src="images/nerdai-hero-2.png" alt="" />
 									</div>
 
 									<div class="bottom-nav inner project-wider">
