--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Nerdwallet AI (Page under construction)</title>
+		<title>Nerdwallet AI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -52,13 +52,13 @@
 										<div class="row horizontally-centered">
 											<div class="8u 12u$(small)">
 												<div class="image main">
-													<img class="img-shadow" src="images/nerdai-hero.jpg" alt="old designs" title="old designs"/>
+													<img class="img-shadow" src="images/nerdai-hero.jpg"/>
 												</div>
 											</div>
 											<div class="4u 12u$(small)">
 												<h2>Context</h2>
 												<p>
-													NerdWallet’s mission is to empower users with the information they need to make life’s financial decisions with confidence. The rise of LLMs presented both a challenge and an opportunity to advance this mission. I led a hackathon team to create an MVP of a chat module incorporating ChatGPT technology, winning the top award and inspiring leadership to establish a dedicated AI team, where I led design.
+													NerdWallet’s mission is to empower users with the information they need to make financial decisions confidently. The rise of LLMs presented both a challenge and an opportunity to advance this mission. I led a hackathon team to create an MVP chat module incorporating ChatGPT technology, winning the top award and inspiring leadership to establish a dedicated AI team, where I led design.
 												</p>
 											</div>
 										</div>
@@ -67,20 +67,20 @@
 										<h2>Objectives</h2>
 										<ul class="align-left">
                                             <li>
-                                                <b>User Needs:</b> Provide answers to complex financial questions quickly and accurately.
+                                                <b>User Needs:</b> Provide quick and accurate answers to complex financial questions.
                                             </li>
                                             <li>
                                                 <b>Business Needs: </b>Differentiate NerdWallet from LLM competitors with a unique, trustworthy chat experience.                                                
                                             </li>
                                             <li>   
-                                                <b>Hypothesis: </b>Integrating a chat experience that answers user queries and directs them to fact-checked NerdWallet content will create a uniquely reliable service.
+                                                <b>Hypothesis: </b> Integrating a chat that answers user queries and directs them to fact-checked NerdWallet content will create a uniquely reliable service.
                                             </li>
                                         </ul>
 									</div>
                                     <div class="content-block">
 										<div class="narrow-centered-text">
 											<h1>User Research</h1>
-											<p>I designed and conducted extensive user research studies, including surveys, preference tests, and video-recorded prototype tests with early design iterations.  Collaboration with product management is essential to design research that accurately pinpoints user pain points and needs.
+											<p>I designed and conducted extensive user research studies, including surveys, preference tests, and video-recorded prototype tests with early design iterations. Collaboration with product management was essential to accurately identify user pain points and needs.
 											</p>
 										</div>
 										<div class="row row-spacer">
@@ -88,19 +88,19 @@
 												<h3>Key Insights</h3>
 												<ul>
 													<li>
-														<b>Usefulness:</b> Users struggle with information overload from lengthy articles. They value time and efficiency, making an AI chat that provides quick, precise answers highly desirable.
+														<b>Findability:</b> Users struggle with information overload from lengthy articles. They value time and efficiency, making an AI chat that provides quick, precise answers highly desirable.
 														</li>
 														<li><b>Trustworthiness:</b> Users are skeptical of LLMs. Linking responses to NerdWallet’s expert-written content helps build trust.</li>
 														
 														<li> <b>Usefulness:</b> Amidst NerdWallet's vast content, the chat needs to stand out without overwhelming the user interface.</li>
 														<li><b>Discoverability:</b> Users struggle with information overload from lengthy articles. They value time and efficiency, making an AI chat that provides quick, precise answers highly desirable.</li>
-														<li>                                                <b>Clarity:</b> Users often confuse AI chats with traditional chatbots. Clearly signaling the advanced capabilities of the chat is crucial.</li>
+														<li> <b>Clarity:</b> Users often confuse AI chats with traditional chatbots. Clearly signaling the advanced capabilities of the chat is crucial.</li>
 														</ul>   
 											</div>
 
                                             <div class="7u 12u$(small)">
                                                 <div class="image main">
-                                                    <img class="img-shadow" src="images/user-research.jpg" alt="user research" title="old designs"/>
+                                                    <img class="img-shadow" src="images/user-research.jpg" alt="user research"/>
                                                 </div>
                                             </div>
 										</div>
@@ -131,7 +131,7 @@
 											</div>
 											<div class="7u 12u$(small)">
 												<div class="image main">
-													<img class="img-shadow" src="images/user-journey-nw.jpeg" alt="old designs" title="old designs"/>
+													<img class="img-shadow" src="images/user-journey-nw.jpeg"/>
 												</div>
 											</div>
 										</div>
@@ -145,7 +145,7 @@
 											</div>
 											<div class="7u 12u$(small)">
                                                 <div class="image main">
-                                                    <img class="img-shadow" src="images/Ideation.jpg" alt="old designs" title="old designs"/>
+                                                    <img class="img-shadow" src="images/Ideation.jpg"/>
                                                 </div>
                                             </div>
 										</div>
@@ -158,7 +158,7 @@
                                                 </div>
                                                 <div class="7u 12u$(small)">
                                                     <div class="image main">
-                                                        <img class="img-shadow" src="images/competitor-analysis-nw.jpeg" alt="old designs" title="old designs"/>
+                                                        <img class="img-shadow" src="images/competitor-analysis-nw.jpeg"/>
                                                     </div>
                                                 </div>
                                             </div>
@@ -183,7 +183,7 @@
                                             </div>
                                             <div class="7u 12u$(small)">
                                                 <div class="image main">
-                                                    <img class="img-shadow" src="images/nerdai-visual-refinement.jpg" alt="old designs" title="old designs"/>
+                                                    <img class="img-shadow" src="images/nerdai-visual-refinement.jpg"/>
                                                 </div>
                                             </div>
                                         </div>
@@ -200,7 +200,7 @@
                                             </div>
 											<div class="7u 12u$(small)">
                                                 <div class="image main">
-                                                    <img class="img-shadow" src="images/prototypes.jpeg" alt="old designs" title="old designs"/>
+                                                    <img class="img-shadow" src="images/prototypes.jpeg"/>
                                                 </div>
                                             </div>
 										</div>
@@ -216,7 +216,7 @@
 											</div>
 											<div class="7u 12u$(small)">
 												<div class="image main">
-													<img class="img-shadow" src="images/user-research.jpg" alt="old designs" title="old designs"/>
+													<img class="img-shadow" src="images/user-research.jpg"/>
 												</div>
 											</div>
 										</div>
@@ -231,7 +231,7 @@
 											</p>
 											</div>
 											<div class="image main">
-												<img class="img-shadow" src="images/handoff-file-nerd-ai.jpeg" alt="old designs" title="old designs"/>
+												<img class="img-shadow" src="images/handoff-file-nerd-ai.jpeg"/>
 											</div>
 										</div>
 
@@ -264,8 +264,8 @@
 													</div>
 													<div class="row center-contents">
 														<div class="5u 12u$(small)">
-															<h3>Boosting the user journey</h3>
-															<p>We discovered that the presence of the chat-bot could boost user engagment with the rest of the site, increasing average user page views and increasing likelihod of monetizing.</p>
+															<h3>aiding the nerdwallet user journey</h3>
+															<p>We discovered that the presence of the chat-bot could boost user engagment with the rest of the site, increasing average user page views and increasing likelihood of monetizing.</p>
 														</div>
 														<div class="5u 12u$(small)">
 															<h3>Product expansion</h3>
