update nestegg page
update nestegg page

--- a/nestegg.html
+++ b/nestegg.html
@@ -51,14 +51,10 @@
 									<div class="content-block">
 										<h2>What is NestEgg?</h2>
 										<p>
-											At NestEgg, our aim is to empower ordinary people to achieve financial independence through real-estate ownership. One way we do this is by providing an ecosystem that allows mom and pop landlords to easily self-manage their own portfolios without hiring a property manager. (Check out our <a href="https://nestegg.rent/">website</a> to learn more.)
+											At NestEgg, our aim was to empower ordinary people to achieve financial independence through real-estate ownership. We did this by providing an ecosystem that allows mom and pop landlords to easily self-manage their own portfolios without hiring a property manager. NestEgg was acquired by <a href="https://www.truehold.com/">Truehold</a> in 2022.
 									</p>
-									<h2>My role</h2>
-									<p>
-											I joined NestEgg in 2018 in a hybrid dev/design role, but in 2020, our Design Director left, and I stepped up to fill in his shoes, taking over product design for the company. I had the privilege of helping pilot our product into a <strong>successful series-A</strong> of 14M, working cross-functionally with a product manager and a team of engineers.
-										</p>
 										<h2>Sample of work</h2>
-										 Keep scrolling to view mockups/concepts of some of the key features I've been working on!<br/><br/>
+										 Keep scrolling to view mockups of some of the key features that I worked on.<br/><br/>
 										 <i><strong>(For deep-dives of my design process, check out my <a href="maintenance-redesign.html">Maintenance redesign project</a> or my <a href="dashboard.html">Timeline redesign project.</a>)</strong></i>
 									</div>
 								</div>
