--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -216,7 +216,7 @@
 											</div>
 											<div class="7u 12u$(small)">
 												<div class="image main">
-													<img class="img-shadow" src="images/user-research.jpg"/>
+													<img class="img-shadow" src="images/research-slide.jpg"/>
 												</div>
 											</div>
 										</div>
@@ -246,10 +246,15 @@
 								<div class="inner project-wider">
 										<div class="content-block">
 												<div class="narrow-centered-text">
-												<h1 >conclusion</h1>
 												<h2 style="margin-top: 2em">Successes</h2>
 													<p>Our quantitative data and qualitative user research gave us validation that we had succeeded in using NerdWallet AI to aid the user journey for NerdWallet users and solve the pain points we had identified</p>
+												
+													<div class="image main">
+														<img class="img-shadow" src="images/closing-slides.png"/>
+													</div>
 												</div>
+												
+
 													<div class="row row-spacer center-contents">
 														<div class="5u 12u$(small)">
 															<h3>User satisfaction</h3>
