--- a/nestegg.html
+++ b/nestegg.html
@@ -59,7 +59,7 @@
 									</div>
 								</div>
 
-								<div class="inner-bigger">
+								<div class="inner" style="width: 70em !important">
 									<h1 style="z-index: 4; text-align: center; margin-top: 3em">Tenant portal</h1>
 									<p style="text-align: center; margin-bottom: 4em;">Redesign of the tenant portal including a new onboarding experience, dashboard, and payment settings page.</p>
 									<div class="image main img-link-no-cursor" style="margin-bottom: 6em;">
