fix edits on nerdwallet page
fix edits on nerdwallet page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									<header>
 										<h2>NerdWallet AI</h2>
 									</header>
-									<p>Developing an LLM financial advisor.
+									<p>Developing an AI financial advisor.
 									</p>
 									<div class="roles">
 										<span class="roles-chip">
@@ -151,7 +151,7 @@
 										<header>
 											<h2>NestEgg Dashboard Redesign</h2>
 										</header>
-										<p>I redesigned the key landing page in our App to better address our users' primary use cases.</p>
+										<p>Redesiging the key landing page in our App to better address our users' primary use cases.</p>
 										<div class="roles">
 											<span class="roles-chip">
 												UX/UI Design
