--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							    <span class="wrap"></span>
 							</h1>
 							</header>
-							<p style="width: 100%; max-width: 500px; margin-left: auto; margin-right: auto; letter-spacing: 0.7px;">With a background in Computer Science, Graphic Design, and Content Writing, I bring a multi-disciplinary approach to the design process. It's my hope to pioneer ethical design initiatives that will improve the effect of technology on our lives. Let's work together!</p>
+							<p style="width: 100%; max-width: 750px; margin-left: auto; margin-right: auto; letter-spacing: 0.7px;">Before working in tech, I aspired to be a writer. Now, I tell stories through thoughtfully crafted user experiences. With 7+ years of experience in both engineering and design, I bring a deep understanding of the full product development process to my work. I thrive in situations that require pioneering energy – getting from 0 to 1 and transforming complex problems into elegant solutions. Let’s work together!</p>
 						</div>
 						<!-- <a href="#banner" class="more">Learn More</a> -->
 					</section>
@@ -68,7 +68,7 @@
 									<header>
 										<h2>NerdWallet AI</h2>
 									</header>
-									<p>Developing an AI financial advisor.
+									<p>Developed an AI chat that provided a completely new way for NerdWallet users to find financial answers and products.
 									</p>
 									<div class="roles">
 										<span class="roles-chip">
@@ -95,7 +95,7 @@
 										<header>
 											<h2>NestEgg: Seed to Series-A</h2>
 										</header>
-										<p>Helping build the next prop-tech unicorn.</p>
+										<p>Building key user flows and dashboards for the next prop-tech unicorn..</p>
 										<div class="roles">
 											<span class="roles-chip">
 												UX/UI Design
@@ -124,7 +124,7 @@
 										<header>
 											<h2>Nestegg maintenance redesign</h2>
 										</header>
-										<p>Post Series-A, our design team at NestEgg revamped our maintenance feature to increase adoption among our user-base.
+										<p>Post Series-A, I led a complete re-imagining of our maintenance feature to increase efficiency and user adoption.
 										</p>
 										<div class="roles">
 											<span class="roles-chip">
@@ -151,7 +151,7 @@
 										<header>
 											<h2>NestEgg Dashboard Redesign</h2>
 										</header>
-										<p>Redesiging the key landing page in our App to better address our users' primary use cases.</p>
+										<p>Led a complete redesign of our key dashboard and navigation system in our App to modernize the design, simplify the user experience, and make key tasks easier for users to complete.</p>
 										<div class="roles">
 											<span class="roles-chip">
 												UX/UI Design
