--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -83,7 +83,7 @@
 											<p>I designed and conducted extensive user research studies, including surveys, preference tests, and video-recorded prototype tests with early design iterations. Collaboration with product management was essential to accurately identify user pain points and needs.
 											</p>
 										</div>
-										<div class="row row-spacer">
+										<div class="row row-spacer horizontally-centered">
 											<div class="5u 12u$(small)">
 												<h3>Key Insights</h3>
 												<ul>
