--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 							    <span class="wrap"></span>
 							</h1>
 							</header>
-							<p style="width: 100%; max-width: 750px; margin-left: auto; margin-right: auto; letter-spacing: 0.7px;">Before working in tech, I aspired to be a writer. Now, I tell stories through thoughtfully crafted user experiences. With 7+ years of experience in both engineering and design, I bring a deep understanding of the full product development process to my work. I thrive in situations that require pioneering energy – getting from 0 to 1 and transforming complex problems into elegant solutions. Let’s work together!</p>
+							<p style="width: 100%; max-width: 750px; margin-left: auto; margin-right: auto; letter-spacing: 0.7px;">Before working in tech, I aspired to be a writer. Now, I tell stories through thoughtfully crafted user experiences. With 7+ years of experience in both engineering and design, I bring a deep understanding of the full product development process to my work. I thrive in situations that require pioneering energy – getting from 0 to 1 and transforming complex problems into elegant solutions.</p>
+							<p>I'm currently on the market for new opportunities. Let’s work together!</p>
 						</div>
 						<!-- <a href="#banner" class="more">Learn More</a> -->
 					</section>
