update portfolio copy
update portfolio copy

--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -261,7 +261,7 @@
 													<div class="row center-contents">
 														<div class="5u 12u$(small)">
 															<h3>aiding the nerdwallet user journey</h3>
-															<p>We discovered that the presence of the chat-bot could boost user engagment with the rest of the site, increasing average user page views and increasing likelihood of monetizing.</p>
+															<p>We discovered that the presence of the chat-bot could boost user engagment with the rest of the site, increasing average user page views and increasing likelihood of monetizing.  For our article chat-bot, 28% of users would click through to a related link.</p>
 														</div>
 														<div class="5u 12u$(small)">
 															<h3>Product expansion</h3>
